04/07/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a null menu item to the recent files menu for when there are
      no recent files in the list.

03/16/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a URI to the XMLDocument class to allow the XMLDocument to know
      where the document is located.
    * Added some framework for support introspection for built in document
      types.

02/06/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated to work with xerces 2.8.0

02/19/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed bug 143401802. BufferHistory now builds a dom and writes it out
      using DOMSerializer which ensures that the document will be well-formed
      and that special characters will be written out properly.
    * Fixed bug 1434017. The dirty files dialog wasn't closing the dialog
      properly when you save all the files.

02/17/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a bug where indeces weren't being kept properly when serializing a
      document that was larger than the write buffer size.

02/16/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a bug in AdapterNode that allowed you to remove the root document
      element node.
    * Added a copy method to AdapterNode to facilitate copying nodes during
      document editing.

02/10/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Made a fix to XMLDocument to allow it to parse documents that
      have multi-byte characters. The current implementation of the
      ContentManagerInputStream is inadequate to deal with multi-byte
      characters. The solution is to extract the document as a string and
      parse it using a StringReader. This is a bit inefficient as the whole
      document has to be copied into a String object but it will probably be
      adequate for at least the immediate future since jsXe doesn't deal
      _really_ well with large files anyway.

02/09/2006  Ian Lewis   <IanLewis@member.fsf.org>
